facet sidebar with selection, no alternate header bg, but highlight selected facet
it was too busy. But we might still need to call out selected facet?

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -86,12 +86,12 @@ ol.catalog {
 
   // less bling than BL default
   .facet_limit-active {
-    color: inherit;
-    border-color: #ddd;
+    color: $brand-highlight-color;
+    border-color: $panel-default-border;
     & > .panel-heading {
-      background-color: $bg-lightly-highlight;
+      background-color: $panel-default-heading-bg;
       color: inherit;
-      border-color: #ddd;
+      border-color: $panel-default-border;
     }
     .panel-heading + .panel-collapse > .panel-body {
       border-color: #ddd;
