line up facet remove close icon better

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -100,6 +100,9 @@ ol.catalog {
   .facet-values li .selected {
     color: $headings-color;
   }
+  .facet-values .remove {
+    vertical-align: middle;
+  }
 
 
   .panel-group .panel + .panel {
