item count on search results links to viewer where possible

--- a/app/views/curation_concerns/generic_works/_generic_work.html.erb
+++ b/app/views/curation_concerns/generic_works/_generic_work.html.erb
@@ -23,7 +23,12 @@
       <% end %>
       <% if doc_presenter.num_members %>
         <%= content_tag("div", class: "chf-results-list-item-num-members") do %>
-          <%= pluralize(doc_presenter.num_members, 'item') %>
+          <% if doc_presenter.num_members > 0 && doc_presenter.representative_file_id.present? %>
+            <%= link_to( pluralize(doc_presenter.num_members, 'item'),
+                         viewer_path(doc_presenter.id, doc_presenter.representative_id)) %>
+          <% else %>
+            <%= pluralize(doc_presenter.num_members, 'item') %>
+          <% end %>
         <% end %>
       <% end %>
     </div>
