num items on collection search results too

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -172,6 +172,7 @@ ol.catalog {
       @extend %special-label;
       color: $special-label-muted-color;
       text-align: center;
+      margin-top: 4px;
     }
   }
 
