actually looks better simply on the left, no need to overcomplicate

--- a/app/assets/stylesheets/local/results.scss
+++ b/app/assets/stylesheets/local/results.scss
@@ -244,7 +244,7 @@ ol.catalog {
 .chf-constraints-wrapper {
   @extend .chf-container-fluid;
   @extend .clearfix;
-  text-align: right;
+  text-align: left;
 }
 
 #appliedParams.constraints-container {
