add date to work show header

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -28,6 +28,13 @@
           <% end %>
         </ul>
       <% end %>
+
+      <% if @presenter.has_values_for?(Solrizer.solr_name('date_of_work', :stored_searchable)) %>
+        <div class="work-show-date">
+          <%= @presenter.field_value(Solrizer.solr_name("date_of_work", :stored_searchable), join_type: :list) %>
+        </div>
+      <% end %>
+
     </header>
   </div>
 
