new heading for metadata section on local info

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -102,7 +102,7 @@
     </table>
 
 
-    <h2 class="attribute-sub-head">At the Chemical Heritage Foundation</h2>
+    <h2 class="attribute-sub-head">Physical location</h2>
     <table class="<%= dom_class(@presenter) %> chf-attributes">
         <%= @presenter.attribute_to_html(:division, label: "Department", render_as: :faceted) %>
         <%= @presenter.attribute_to_html(:exhibition) %>
