--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -113,6 +113,7 @@
       font-size: 18px;
       line-height: 1.2;
       text-transform: uppercase;
+      letter-spacing: 0.03em;
       font-weight: $semi-bold-weight;
     }
   }
