--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -83,20 +83,20 @@ hr.brand {
     margin-right: 16px;
   }
 
-  &.facebook {
-    color: #3b5998;
-  }
-  &.twitter {
-    color: #1da1f2;
-  }
-  &.google-plus {
-    color: #dd4b39;
-  }
-  &.tumblr {
-    color: #35465c;
-  }
-  &:hover, &:focus {
-    color: $link-hover-color;
-  }
+  // &.facebook {
+  //   color: #3b5998;
+  // }
+  // &.twitter {
+  //   color: #1da1f2;
+  // }
+  // &.google-plus {
+  //   color: #dd4b39;
+  // }
+  // &.tumblr {
+  //   color: #35465c;
+  // }
+  // &:hover, &:focus {
+  //   color: $link-hover-color;
+  // }
 
 }
