custom url renderer
renders just hostname with elipses, and omits certain urls we want to suppress

--- a/app/views/curation_concerns/base/show.html.erb
+++ b/app/views/curation_concerns/base/show.html.erb
@@ -96,7 +96,7 @@
 
         <%= @presenter.attribute_to_html(:rights, render_as: :rights) %>
         <%= @presenter.attribute_to_html(:rights_holder) %>
-        <%= @presenter.attribute_to_html(:related_url, render_as: :blank_target) %>
+        <%= @presenter.attribute_to_html(:related_url, render_as: :chf_related_url) %>
         <%= @presenter.attribute_to_html(:credit_line) %>
         <%= @presenter.attribute_to_html(:additional_credit) %>
     </table>
